# tetriz

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ccache.cmake  compiler_definitions.cmake  compiler_options.cmake  options.cmake  package.cmake  print_info.cmake
src/: CMakeLists.txt  main.cpp
src/terminal/: CMakeLists.txt
src/terminal/include/terminal/: terminal.h
src/terminal/src/: terminal.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: control.h  draw.h  draw.map  terminal.h  utils.h
src/utils/src/: control.cpp  draw.cpp  terminal.cpp  utils.cpp
